fixing test errors, did styling for form/comments on product page, changed comment container to include readable datetime, changed footer in product.php

--- a/src/client/css/product.css
+++ b/src/client/css/product.css
@@ -18,6 +18,7 @@
     width: 100%;
     height: 22em;
     align-items: center;
+    margin-bottom: 0.5em;
 }
 
 .left{
@@ -101,12 +102,16 @@ h1 {
     display: flex;
     flex-direction: row;
     width: 100%;
+    margin-bottom: 0.5em;
+
 }
 #add-comment-form {
     float: right;
     display: none;
     border-radius: 5px;
     margin-left: 1em;
+    width: 30%;
+    height: 10%;
 }
 #add-comment-form label{
     width: 100%;
@@ -137,14 +142,13 @@ h1 {
     width: 3em;
 }
 
-#all-comments{
+.all-comments{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 70%;
-    margin-right: 0.5em;
-    margin-top: 2em;
+    width: 60%;
+
 }
 
 .comment-container{
@@ -155,11 +159,17 @@ h1 {
     padding: 0.25em;
     width: 100%;
     margin-bottom: 0.25em;
+    padding: 0.5em;
 }
 
 .comment-text{
-    margin-left: 1em;
+    margin-left: 0.5em;
 
+}
+.date_time_comment_added{
+    margin-left: auto; /* Push the element to the right */
+    width: 20%;
+    text-align: right;
 }
 
 .second{
@@ -167,8 +177,6 @@ h1 {
     flex-direction: row;
     width: 100%;
     height: auto;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
 }
 
 canvas{
